# freertos-std-example

./: .gitmodules  README.md
.github/workflows/: main.yml  manual-test.yml  nightly-tests.yml
FreeRTOS-Qemu-Demo/: .gdbinit  FreeRTOSConfig.h  Makefile  Readme.md  alloc_trace.csv  build_and_run.sh  main.c  main_blinky.c  mps2_m3.ld  printf-stdarg.c  rust_std_shim.c
FreeRTOS-STM32F3Discovery-Demo/: CMakeLists.txt  FreeRTOSConfig.h  main.c
FreeRTOS-STM32F3Discovery-Demo/STM32F30x_StdPeriph_Driver/src/: stm32f30x_syscfg.c
gdb-scripts/: my_breakpoint_script.py
rust-app/: Cargo.toml
rust-app/src/: lib.rs  my_threads_tests.rs  sync_tests.rs  threads_tests.rs
rust-app/src/std_tests/: mod.rs  sync_barrier_tests.rs  sync_condvar_tests.rs  sync_mpsc_tests.rs  sync_once_lock_tests.rs  sync_once_tests.rs  sync_remutex_tests.rs  sync_rwlock_tests.rs
rust-unwind-toolchain/: build-unwind-toolchain.sh  config.toml  setup-unwind-for-thumbv7m-target.patch
tests/: .gitignore  test.py
tests/rust/: Cargo.toml
tests/rust/.cargo/: config
tests/rust/src/: .gitignore  lib.rs  sync_tests.rs  test_function.rs
tests/rust/src/std_tests/: mod.rs  sync_mpsc_tests.rs  sync_mutex_tests.rs  sync_once_lock_tests.rs  thread_tests.rs
