[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_app"
crate-type = ["staticlib"] # Creates static lib

[dependencies]
std = {path = "../freertos-std", features = ["semihosted-stdio", "panic-unwind"], package = "freertos-std"}
